// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cancel save 1`] = `
Object {
  "Constructor": "FormWithConfirmModal",
  "Options": Object {
    "ID": "component",
    "confirmCancelErrors": Object {
      "Messages": Array [],
    },
    "confirmText": "",
    "confirmTitle": "",
    "directives": Object {
      "EventListener": [Function],
      "disabled": [Function],
      "onclick": [Function],
      "oninput": [Function],
      "onload": [Function],
      "onresize": [Function],
      "onscroll": [Function],
      "onselect": [Function],
      "onsubmit": [Function],
      "ref": [Function],
    },
    "getErrors": [Function],
    "modalVisible": false,
    "onSuccess": [Function],
    "saveData": [MockFunction],
    "submitText": "Update",
  },
  "html": "
<form class=\\"form-layout\\">
  <!--header-->
  <!--if-->
  <!--ErrorsPanel-->
  <!--default-->
  <!--default-->
  <button type=\\"submit\\">
    <!--if-->Update
    <!--submit-->
  </button>
  <!--footer-->
</form>
<!--FormContainer-->
<!--if-->
",
}
`;

exports[`fail save 1`] = `
Object {
  "Constructor": "FormWithConfirmModal",
  "Options": Object {
    "ID": "component",
    "confirmCancelErrors": Object {
      "Messages": Array [],
    },
    "confirmText": "",
    "confirmTitle": "",
    "directives": Object {
      "EventListener": [Function],
      "disabled": [Function],
      "onclick": [Function],
      "oninput": [Function],
      "onload": [Function],
      "onresize": [Function],
      "onscroll": [Function],
      "onselect": [Function],
      "onsubmit": [Function],
      "ref": [Function],
    },
    "getErrors": [Function],
    "modalVisible": false,
    "onSuccess": [Function],
    "saveData": [Function],
    "submitText": "Update",
  },
  "html": "
<form class=\\"form-layout\\">
  <!--header-->
  <ul class=\\"errors-panel\\">
    <li>Error test</li>
  </ul>
  <!--if-->
  <!--ErrorsPanel-->
  <!--default-->
  <!--default-->
  <button type=\\"submit\\">
    <!--if-->Update
    <!--submit-->
  </button>
  <!--footer-->
</form>
<!--FormContainer-->
<!--if-->
",
}
`;

exports[`renders correctly 1`] = `
Object {
  "Constructor": "FormWithConfirmModal",
  "Options": Object {
    "ID": "component",
    "confirmCancelErrors": Object {
      "Messages": Array [],
    },
    "confirmText": "",
    "confirmTitle": "",
    "directives": Object {
      "EventListener": [Function],
      "disabled": [Function],
      "onclick": [Function],
      "oninput": [Function],
      "onload": [Function],
      "onresize": [Function],
      "onscroll": [Function],
      "onselect": [Function],
      "onsubmit": [Function],
      "ref": [Function],
    },
    "getErrors": [Function],
    "modalVisible": false,
    "onSuccess": [Function],
    "saveData": [Function],
    "submitText": "Update",
  },
  "html": "
<form class=\\"form-layout\\">
  <!--header-->
  <!--if-->
  <!--ErrorsPanel-->
  <!--default-->
  <!--default-->
  <button type=\\"submit\\">
    <!--if-->Update
    <!--submit-->
  </button>
  <!--footer-->
</form>
<!--FormContainer-->
<!--if-->
",
}
`;

exports[`success save 1`] = `
Object {
  "Constructor": "FormWithConfirmModal",
  "Options": Object {
    "ID": "component",
    "confirmCancelErrors": Object {
      "Messages": Array [],
    },
    "confirmText": "",
    "confirmTitle": "",
    "directives": Object {
      "EventListener": [Function],
      "disabled": [Function],
      "onclick": [Function],
      "oninput": [Function],
      "onload": [Function],
      "onresize": [Function],
      "onscroll": [Function],
      "onselect": [Function],
      "onsubmit": [Function],
      "ref": [Function],
    },
    "getErrors": [Function],
    "modalVisible": true,
    "onSuccess": [MockFunction],
    "saveData": [Function],
    "submitText": "Update",
  },
  "html": "
<form class=\\"form-layout\\">
  <!--header-->
  <!--if-->
  <!--ErrorsPanel-->
  <!--default-->
  <!--default-->
  <button type=\\"submit\\" disabled=\\"\\">
    <div class=\\"sk-cube-grid\\">
      <div class=\\"sk-cube sk-cube1\\"></div>
      <div class=\\"sk-cube sk-cube2\\"></div>
      <div class=\\"sk-cube sk-cube3\\"></div>
      <div class=\\"sk-cube sk-cube4\\"></div>
      <div class=\\"sk-cube sk-cube5\\"></div>
      <div class=\\"sk-cube sk-cube6\\"></div>
      <div class=\\"sk-cube sk-cube7\\"></div>
      <div class=\\"sk-cube sk-cube8\\"></div>
      <div class=\\"sk-cube sk-cube9\\"></div>
    </div>
    <!--CubeAnimation-->
    <!--if-->Update
    <!--submit-->
  </button>
  <!--footer-->
</form>
<!--FormContainer-->
<div class=\\"modal\\" data-test-modal=\\"\\"><span class=\\"close\\" title=\\"Close Modal\\" data-test-close-button=\\"\\">×</span>
  <!--if-->
  <div class=\\"modal-content\\">
    <div class=\\"container\\">
      <h4></h4>
      <p class=\\"content\\"></p>
      <div class=\\"footer\\">
        <button data-test-ok-button=\\"\\">Ok</button>
        <button class=\\"btn-secondary\\" data-test-cancel-button=\\"\\">Cancel</button>
      </div>
    </div>
  </div>
</div>
<!--ModalWindow-->
<!--if-->
",
}
`;

exports[`success save 2`] = `
Object {
  "Constructor": "FormWithConfirmModal",
  "Options": Object {
    "ID": "component",
    "confirmCancelErrors": Object {
      "Messages": Array [],
    },
    "confirmText": "",
    "confirmTitle": "",
    "directives": Object {
      "EventListener": [Function],
      "disabled": [Function],
      "onclick": [Function],
      "oninput": [Function],
      "onload": [Function],
      "onresize": [Function],
      "onscroll": [Function],
      "onselect": [Function],
      "onsubmit": [Function],
      "ref": [Function],
    },
    "getErrors": [Function],
    "modalVisible": false,
    "onSuccess": [MockFunction] {
      "calls": Array [
        Array [
          undefined,
        ],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    },
    "saveData": [Function],
    "submitText": "Update",
  },
  "html": "
<form class=\\"form-layout\\">
  <!--header-->
  <!--if-->
  <!--ErrorsPanel-->
  <!--default-->
  <!--default-->
  <button type=\\"submit\\" disabled=\\"\\">
    <div class=\\"sk-cube-grid\\">
      <div class=\\"sk-cube sk-cube1\\"></div>
      <div class=\\"sk-cube sk-cube2\\"></div>
      <div class=\\"sk-cube sk-cube3\\"></div>
      <div class=\\"sk-cube sk-cube4\\"></div>
      <div class=\\"sk-cube sk-cube5\\"></div>
      <div class=\\"sk-cube sk-cube6\\"></div>
      <div class=\\"sk-cube sk-cube7\\"></div>
      <div class=\\"sk-cube sk-cube8\\"></div>
      <div class=\\"sk-cube sk-cube9\\"></div>
    </div>
    <!--CubeAnimation-->
    <!--if-->Update
    <!--submit-->
  </button>
  <!--footer-->
</form>
<!--FormContainer-->
<!--if-->
",
}
`;
